# oom_classroom

./: .gitignore  CMakeLists.txt  Readme.md  client_main.cpp  database.sql.txt  main.cpp  oom.sql  requirement.txt  server_main.cpp
src/data/: database.cpp  database.h
src/entity/: classroom.cpp  classroom.h  user.cpp  user.h
src/network/: client.cpp  client.h  data_template.h  data_transfer.cpp  data_transfer.h  server.cpp  server.h
src/system/: backend.cpp  backend.h  frontend.cpp  frontend.h
test/: test_database.cpp
